<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
 <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip" >
          <!--  Email Label -->

          <TextView
              android:id="@+id/tvEmail"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/email" />

          <EditText android:id="@+id/etEmail"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
          <!--  Password Label -->

          <TextView
              android:id="@+id/tvPass"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/pass"/>

          <EditText android:id="@+id/etPass"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"/>
          <!-- Login button -->

          <Button
              android:id="@+id/btnLogin"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:onClick="onClickButton"
              android:text="@string/login" />

          <!-- Link to Registration Screen -->

          <TextView
              android:id="@+id/tvMessage"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall" />

          <TextView android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:layout_marginBottom="40dip"
                android:text="@string/register"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#0b84aa"
                android:onClick="onClickLink"
                android:clickable="true"/>
 
</LinearLayout>
</ScrollView>